fix: card content gap at top left on hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -509,7 +509,7 @@ footer p {
   position: absolute;
   height: 100%;
   width: 0%;
-  left: -9%;
+  left: -10%;
   top: 0;
   z-index: -1;
 
